<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="Blue">Blue</string>
    <string name="Gold">Gold</string>
    <string name="Green">Green</string>
    <string name="None">None</string>
    <string name="Orange">Orange</string>
    <string name="Pink">Pink</string>
    <string name="change_password">Change Password</string>
    <string name="clear_saved_card_title">Clear Saved Payment Method</string>
    <string name="title_chat_settings">Chat Settings</string>
    <string name="title_copyright">Legal</string>
    <string name="title_developers">Developers</string>
    <string name="title_email">Email</string>
    <string name="title_help">Help</string>
    <string name="title_help_about_us">Help &amp; About Us</string>
    <string name="title_kik_username">Your Kik Username</string>
    <string name="title_licenses">Licenses</string>
    <string name="title_logout">Log Out</string>
    <string name="title_name">Name</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_terms_of_service">Terms of Service</string>
    <string name="title_your_account_info">Your Account</string>
    <string name="web_kik_support">http://kik.com/support.php</string>
    <string name="your_code">Your Kik Code</string>
    <string name="title_community_guidelines">Community Standards</string>
    <string name="title_kin_wallet">KIN Wallet Preview</string>
    <string name="title_your_web_history">Your Web History</string>
    <string name="web_kik_community_guidelines">http://kik.com/standards</string>
    <string name="lynx_settings">Lynx Settings</string>
    <string name="lynx_custom_crash">Custom Crash</string>
    <string name="lynx_copy_error_log">Copy Error Log</string>
    <string name="lynx_copy_error_log_key">lynx.crash.clipboard</string>
    <string name="lynx_copy_error_log_summary">Lets you copy the error message when clicking on the error dialog</string>
    <string name="lynx_select_and_scroll_error_message">Select and Scroll Error message</string>
    <string name="lynx_select_and_scroll_error_message_key">lynx.crash.select</string>
    <string name="lynx_select_and_scroll_error_message_summary">Allows you to select and scroll through the text thats on the error dialog</string>
    <string name="lynx_enable_custom_title">Enable Custom Title</string>
    <string name="lynx_enable_custom_title_key">lynx.crash.title</string>
    <string name="lynx_enable_custom_title_summary">Allows you set the error dialog title to your likings</string>
    <string name="lynx_set_all_caps">Set All Caps</string>
    <string name="lynx_set_all_caps_key">lynx.crash.caps</string>
    <string name="lynx_set_all_caps_summary">Changes all the error text to upper case</string>
    <string name="lynx_light_error_background_color">Light Error Background color</string>
    <string name="lynx_light_error_background_color_key">lynx.crash.lightbg</string>
    <string name="lynx_light_error_background_color_summary">Changes the error dialog background to white</string>
    <string name="lynx_dark_error_text_color">Dark Error Text Color</string>
    <string name="lynx_dark_error_text_color_key">lynx.crash.darktext</string>
    <string name="lynx_dark_error_text_color_summary">Changes the error text color to black</string>
    <string name="lynx_jid">JID</string>
    <string name="lynx_auto_reply">Auto Reply</string>
    <string name="lynx_auto_reply_key">lynx.autoreply</string>
    <string name="lynx_auto_reply_summary">Sends reply messages instantly</string>
    <string name="lynx_auto_type">Auto Type</string>
    <string name="lynx_auto_type_key">lynx.autotype</string>
    <string name="lynx_auto_type_summary">Send is typing... instantly</string>
    <string name="lynx_auto_meme">Auto Meme</string>
    <string name="lynx_auto_meme_key">lynx.automeme</string>
    <string name="lynx_auto_meme_summary">BEST MEME EVER</string>
    <string name="lynx_auto_annoy">Auto Annoy</string>
    <string name="lynx_auto_annoy_key">lynx.autoannoy</string>
    <string name="lynx_auto_annoy_summary">BEST TOGGLE EVER</string>
    <string name="lynx_auto_nudes">Auto Nudes</string>
    <string name="lynx_auto_nudes_key">lynx.autonudes</string>
    <string name="lynx_auto_nudes_summary">BEST NUDES EVER</string>
    <string name="lynx_skynet">Skynet</string>
    <string name="lynx_skynet_key">lynx.ai</string>
    <string name="lynx_skynet_summary">BEST MOD EVER</string>
    <string name="lynx_auto_read">Auto Read</string>
    <string name="lynx_auto_read_key">lynx.autoread</string>
    <string name="lynx_auto_read_summary">Sends read receipts instantly</string>
    <string name="lynx_custom_autoreply">Auto Reply Message</string>
    <string name="lynx_custom_autoreply_summary">Set the message Auto Reply will send.</string>
    <string name="lynx_enable_group_trolls">Enables Group Trolls</string>
    <string name="lynx_enable_group_trolls_summary">Enables Troll Options to work on group chats</string>
    <string name="lynx_enable_group_trolls_key">lynx.groupauto</string>
    <string name="lynx_auto_rememe">Reverse Auto Meme</string>
    <string name="lynx_auto_rememe_key">lynx.reautomeme</string>
    <string name="lynx_auto_rememe_summary">BEST MEME EVER</string>
    <string name="lynx_pirate_talk">Pirate Talk</string>
    <string name="lynx_pirate_talk_key">lynx.piratetalk</string>
    <string name="lynx_pirate_talk_summary">Talk like a pirate!</string>
    <string name="lynx_lurk_exposer">Lurk Exposer</string>
    <string name="lynx_lurk_exposer_key">lynx.lurk</string>
    <string name="lynx_lurk_exposer_summary">Expose Lurkers on groups</string>
    <string name="lurk_exposer_mode">Lurk Exposer Mode</string>
    <string name="lurk_exposer_mode_key">lynx.lurk.mode</string>
    <string name="lurk_exposer_mode_summary">Mode of your lurk exposer!</string>
    <string name="lynx_lurker_count">Lurker Count</string>
    <string name="lynx_lurker_count_key">lynx.lurk.count</string>
    <string name="lynx_lurker_count_summary">Lurkers caught before re-catching the same lurkers</string>
    <string name="kyoto_settings">Kyotokek Settings</string>
    <string name="kyotokek_faq_title">"FAQ"</string>
    <string name="kyotokek_disclaimer_title">"Disclaimer"</string>
    <string name="kyotokek_changelog_title">"Changelog"</string>
    <string name="kyotokek_about_title">"About Kyotokek"</string>
    <string name="kyotokek_website_title">"Kyotokek Website"</string>
    <string name="kyotokek_website_summary">"Visit the website for some more useful information, or to check what's new"</string>
    <string name="kyotokek_website_link">"http://www.kyotokek.ml"</string>
    <string name="kyotokek_thanks_title">"Special Thanks"</string>
    <string name="kyotokek_dev_kiyo_title">"Kiyo"</string>
    <string name="kyotokek_dev_kiyo_summary">"Creator of kyotokek"</string>
    <string name="kyotokek_dev_kiyo_data">"kik://users/_kiyoshi_/profile"</string>
    <string name="kyotokek_dev_kinky_title">"Kinky"</string>
    <string name="kyotokek_dev_kinky_summary">"Mentor. Answered useful questions that were asked."</string>
    <string name="kyotokek_dev_kinky_data">"kik://users/.no_u/profile"</string>
</resources>